2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: Avoid undefined behaviour when char is signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: Replace bzero(s, l) => memset(s, 0, l).

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (gsftopkpsheaderdir): Change texmf => texmf-dist.

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Enable silent rules.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-10-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: Avoid MSVC warning.

2012-10-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: All current C compilers support `const'.

2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: Pass program name string to kpse_set_program_name.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c [MINGW32]: Drop superfluous dostounix_filename().
	Call texlive_gs_init() for MINGW32, as for native WIN32.

2010-09-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (DISTCLEANFILES): Use += instead of = to add
	more files.

2010-03-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: Use kpse_set_program_name() instead of
	kpse_set_progname().

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c [WIN32]: Patches for MinGW32 build
	from Akira Kakuto, 26 Feb 2010 11:00:34.
	Avoid compiler warnings.

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: Add '#if defined(KPSE_DEBUG)' to allow compilation
	with '-DNO_DEBUG'.

2009-11-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac, gsftopk.c: Require recent kpathsea version.

2009-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>
